<resources>
    <string name="app_name">Workout App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ed_text" />
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="group_profile">Профиль</string>
    <string name="group_nutrition">Цель питания</string>
    <string name="group_activity">Активность</string>
    <string name="group_data">Данные</string>
    <string name="group_general_goal">Общие цели</string>
    <string name="group_activity_goal">Цели активности</string>
    <string name="group_food_goal">Цели питания</string>
    <string name="group_progress">Прогресс</string>
    <string name="data_management">Управление данными</string>
    <string-array name="children_profile">
        <item>Имя: </item>
        <item>Рост: </item>
        <item>Вес: </item>
        <item>Возраст: </item>
    </string-array>
    <string-array name="children_nutrition">
        <item>Калории: </item>
        <item>Белки: </item>
        <item>Жиры: </item>
        <item>Углеводы: </item>
    </string-array>
    <string-array name="children_activity">
        <item>Цель подвижности: </item>
        <item>Цель шагов (в день): </item>
        <item>Цель тренировок (в неделю): </item>
        <item>Последняя тренировка: </item>
    </string-array>
    <string-array name="exercise_types">
        <item>Гантели</item>
        <item>Гриф</item>
        <item>Вес тела</item>
        <item>Кроссовер</item>
        <item>Тренажер</item>
        <item>Время</item>
        <item>Кардио</item>
        <item>Другое</item>
    </string-array>
    <string-array name="body_parts">
        <item>Грудь</item>
        <item>Плечи</item>
        <item>Ноги</item>
        <item>Руки</item>
        <item>Тренажер</item>
        <item>Спина</item>
        <item>Пресс</item>
        <item>Другое</item>
    </string-array>
    <string name="profile_settings">Настройки профиля</string>
    <string name="general_goal_settings">Настройки общих целей</string>
    <string name="back_button">Назад</string>
    <string name="profile_picture">Фотография профиля</string>
    <string name="name_hint">Имя</string>
    <string name="height_hint">Рост (см)</string>
    <string name="weight_hint">Вес (кг)</string>
    <string name="age_hint">Возраст</string>
    <string name="goal_hint">Цель тренировок</string>
    <string name="save_button_text">Сохранить изменения</string>
    <string name="title_workouts">Тренировки</string>
    <string name="title_exercises">Упражнения</string>
    <string name="message_start_workout">Начни свою тренировку!</string>
    <string name="message_add_exercise_prompt">Жми \'+ Добавить упражнение\' чтобы начать</string>
    <string name="add_exercise">Добавить упражнение</string>
    <string name="finish_workout">Закончить Тренировку</string>
    <string name="add_set">Добавить подход</string>
    <string name="set">Подход</string>
    <string name="reps">Повторения</string>
    <string name="weight">Вес</string>
    <string name="delete_exercise">Удалить упражнение</string>
    <string name="create_exercise">Создать упражнение</string>
    <string name="create_exercise_title">Создание упражнения</string>
    <string name="delete_exercise_title">Удаление упражнения</string>
    <string name="delete_preset_title">Удаление пресета</string>
    <string name="change_preset_title">Изменение пресета</string>
    <string name="change_exercise_title">Изменение упражнения</string>
    <string name="change_exercise_hint">Изменить упражнение</string>
    <string name="change_preset_hint">Измененить пресет</string>
    <string name="delete_exercise_confirmation">Вы действительно хотите удалить упражнение?</string>
    <string name="delete_preset_confirmation">Вы действительно хотите удалить пресет?</string>
    <string name="preset_name_title">Название пресета</string>
    <string name="exercise_name_title">Название упражнения</string>
    <string name="preset_name_hint">Введите название пресета</string>
    <string name="exercise_type_hint">Тип упражнения</string>
    <string name="exercise_body_type_hint">Часть тела</string>
    <string name="body_type_hint">Часть тела</string>
    <string name="exercise_type_plug">(Тип упражнения)</string>
    <string name="title_add_exercise">Добавление упражнений</string>
    <string name="label_workouts">Тренировки</string>
    <string name="label_exercises">Упражнения</string>
    <string name="food_goal_settings_title">Настройка целей питания</string>
    <string name="food_goal_calories_hint">Суточная норма калорий (ккал)</string>
    <string name="food_goal_calories_label">Укажите, сколько калорий в день вы планируете потреблять.</string>
    <string name="food_goal_protein_hint">Норма белков (г)</string>
    <string name="food_goal_protein_label">Укажите вашу целевую норму белка в граммах</string>
    <string name="food_goal_fat_hint">Норма жиров (г)</string>
    <string name="food_goal_fat_label">Укажите вашу целевую норму жиров в граммах</string>
    <string name="food_goal_carb_hint">Норма углеводов (г)</string>
    <string name="food_goal_carb_label">Укажите вашу целевую норму углеводов в граммах</string>
    <string name="add_food">Добавить еду</string>
    <string name="default_meal_name">Имя приема пищи</string>
    <string name="food_pfc_plug">БЖУ</string>
    <string name="calories_label">Калории: </string>
    <string name="delete_meal">Удалить прием пищи</string>
    <string name="date">Date</string>
</resources>