<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_1"
    tools:context=".Fragments.ProfileFragments.Divide.FoodGoalFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray2"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/back_button"
            android:elevation="3dp"
            android:translationZ="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/FoodGoalFragment_hint_TV"
            style="@style/TextStyle.Big.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/food_goal_settings_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/imageButtonBack"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        style="@style/BigButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCalorieGoal"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/food_goal_calories_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCalorieGoal"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/FoodGoalFragment_calorieGoal_label_TV"
                style="@style/TextStyle.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/food_goal_calories_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCalorieGoal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutProteinGoal"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:hint="@string/food_goal_protein_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/FoodGoalFragment_calorieGoal_label_TV">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextProteinGoal"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/FoodGoalFragment_proteinGoal_label_TV"
                style="@style/TextStyle.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/food_goal_protein_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutProteinGoal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFatGoal"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:hint="@string/food_goal_fat_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/FoodGoalFragment_proteinGoal_label_TV">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextFatGoal"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/FoodGoalFragment_fatGoal_label_TV"
                style="@style/TextStyle.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/food_goal_fat_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutFatGoal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCarbGoal"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:hint="@string/food_goal_carb_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/FoodGoalFragment_fatGoal_label_TV">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCarbGoal"
                    style="@style/CustomTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/FoodGoalFragment_carbGoal_label_TV"
                style="@style/TextStyle.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/food_goal_carb_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCarbGoal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>