<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    tools:context=".Fragments.WorkoutFragments.WorkoutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/dateTextWorkout"
        app:layout_constraintStart_toStartOf="@+id/dateTextWorkout">

        <TextView
            android:id="@+id/dateTextWorkout"
            style="@style/TextStyle.Small"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:text="@string/date"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/WorkoutTextView"
            style="@style/TextStyle.Big.Bold"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:gravity="start|center"
            android:text="@string/title_workouts"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/dateTextWorkout"
            app:layout_constraintTop_toBottomOf="@+id/dateTextWorkout" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="792dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="#555252"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WorkoutTextView">

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView3"
            style="@style/TextStyle.Big.Bold"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:gravity="bottom"
            android:text="@string/title_exercises"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

        </TextView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addExBtn"
            style="@style/SmallButtonWithIc_Plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/add_exercise"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/ic_workout_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

        </ImageView>

        <TextView
            android:id="@+id/textView1"
            style="@style/TextStyle.Big.Bold"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="start|center"
            android:text="@string/message_start_workout"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

        </TextView>

        <TextView
            android:id="@+id/textView2"
            style="@style/TextStyle.Small"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="start|center"
            android:text="@string/message_add_exercise_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1">

        </TextView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/finalWorkBtn"
            style="@style/BigButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/finish_workout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/WorkoutRecyclerView">

        </com.google.android.material.button.MaterialButton>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/WorkoutRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:listitem="@layout/ex_item_workout_layout">


        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>