<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="8dp"
    android:paddingTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="19dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/card_border">

        <TextView
            android:id="@+id/outside_card_meal_name_TV"
            style="@style/TextStyle.Big.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:gravity="left|center"
            android:text="@string/default_meal_name"
            app:layout_constraintEnd_toStartOf="@+id/outside_card_add_food_Btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/outside_card_protein_fat_carbs_TV"
            style="@style/TextStyle.Small"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="left|center"
            android:text="@string/food_pfc_plug"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outside_card_meal_name_TV">

        </TextView>

        <TextView
            android:id="@+id/outside_card_calories_TV"
            style="@style/TextStyle.Small"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:text="@string/calories_label"
            app:layout_constraintStart_toStartOf="@+id/outside_card_protein_fat_carbs_TV"
            app:layout_constraintTop_toBottomOf="@+id/outside_card_protein_fat_carbs_TV">

        </TextView>


        <Button
            android:id="@+id/outside_card_add_food_Btn"
            style="@style/SmallButtonWithIc_Plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/add_food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </Button>





        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/outside_card_inner_RV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/eat_elm_card"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@+id/outside_card_calories_TV">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/outside_card_delete_meal_Btn"
            style="@style/BigButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/delete_meal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/outside_card_inner_RV">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>